# OptimizeTechniques

OptimizeTechniques/: OptimizeTechniques.pro
OptimizeTechniques/arguments/: arguments.pro  main.cpp
OptimizeTechniques/arguments/different_compilers/bin_clang/: CMakeLists.txt
OptimizeTechniques/arguments/different_compilers/bin_gcc/: CMakeLists.txt
OptimizeTechniques/arguments/different_compilers/bin_icc/: CMakeLists.txt
OptimizeTechniques/boolean_and_or/: boolean_and_or.pro  main.cpp
OptimizeTechniques/cache_1/: cache_1.pro  main.cpp
OptimizeTechniques/cache_1/different_compilers/: icc_build.sh
OptimizeTechniques/init_and_assignment/: main.cpp
OptimizeTechniques/init_pod_and/: init_pod_and.pro  main.cpp
OptimizeTechniques/inline/: inline.pro  main.cpp
OptimizeTechniques/list_of_initialization/: list_of_initialization.pro  main.cpp
OptimizeTechniques/loop_1/: loop_1.pro  main.cpp
OptimizeTechniques/loop_collapsing/: main.cpp
OptimizeTechniques/loop_fusion/: loop_fusion.pro  main.cpp
OptimizeTechniques/loop_index_float/: loop_index_float.pro  main.cpp
OptimizeTechniques/loop_index_float/different_compilers/: clang_build.sh
OptimizeTechniques/loop_unrolling/: loop_unrolling.pro  main.cpp
OptimizeTechniques/pass_by_val_ref_pointer/: main.cpp
OptimizeTechniques/pod_types/: main.cpp  pod_types.pro
OptimizeTechniques/pointer_chains/: main.cpp  pointer_chains.pro
OptimizeTechniques/postpone_declaration/: main.cpp
OptimizeTechniques/static_func/: main.cpp  static_func.pro
OptimizeTechniques/struct_pragma/: main.cpp
OptimizeTechniques/swap_vs_my_swap/: main.cpp
OptimizeTechniques/tail_recursion/: main.cpp
OptimizeTechniques/tail_recursion/different_compilers/bin_gcc/: CMakeLists.txt
OptimizeTechniques/template_recursion/: main.cpp  template_recursion.pro
OptimizeTechniques/unswitching/: main.cpp  unswitching.pro
OptimizeTechniques/unswitching/different_compilers/: gcc_build.sh
OptimizeTechniques/volatile/: main.cpp  volatile.pro
OptimizeTechniques/volatile/different_compilers/: all_build.sh
testDifferentCompilers/inline/different_compilers/bin_icc/: CMakeLists.txt
(+10 files in other folders)
